--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 
 <ul>
   <li>
+    <a routerLink="/personajes" > Personajes </a>
+  </li>
+  <li>
     <a routerLink="/peliculas" > Peliculas </a>
   </li>
   <li>
