Se adiciona la vista para los vehiculos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
   <li>
     <a routerLink="/planetas" > Planetas </a>
   </li>
+  <li>
+    <a routerLink="/vehiculos" > Vehiculos </a>
+  </li>
 </ul>
 
 <router-outlet></router-outlet>
