Cambio titulo columna vista personajes

--- a/src/app/personajes/personajes.component.html
+++ b/src/app/personajes/personajes.component.html
@@ -5,7 +5,7 @@
       <tr>
         <th>Nombre</th>
         <th>Altura</th>
-        <th>Color Ojos</th>
+        <th>Color De Ojos</th>
         <th>Género</th>
       </tr>
     </thead>
