--- a/src/app/personajes/personajes.component.html
+++ b/src/app/personajes/personajes.component.html
@@ -3,7 +3,7 @@
   <table border="1" style="width: 100%;">
     <thead>
       <tr>
-        <th>Personaje</th>
+        <th>Nombre</th>
         <th>Altura</th>
         <th>Color De Ojos</th>
         <th>Género</th>
