Cambio vista personajes - video s3

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -5,7 +5,7 @@
     <thead>
       <tr>
         <th>Titulo</th>
-        <th>episode id</th>
+        <th>Episodio</th>
         <th>director</th>
         <th>producer</th>
         <th>release date</th>
