Cambio vista peliculas - video s4

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -6,7 +6,7 @@
       <tr>
         <th>Titulo</th>
         <th>Episodio</th>
-        <th>director</th>
+        <th>Director</th>
         <th>producer</th>
         <th>release date</th>
       </tr>
