Se adiciona docker service en el yml, test films

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -7,7 +7,7 @@
         <th>Titulo</th>
         <th>Episodio</th>
         <th>Director</th>
-        <th>producer</th>
+        <th>Productor</th>
         <th>release date</th>
       </tr>
     </thead>
