Cambio films.component para video final

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -8,7 +8,7 @@
         <th>Episodio</th>
         <th>Director</th>
         <th>Productor</th>
-        <th>release date</th>
+        <th>Fecha Lanzamiento</th>
       </tr>
     </thead>
     <tbody>
